fix: docker文章格式修正

--- a/_posts/docker/_0001/2019-10-20-docker容器基本使用.md
+++ b/_posts/docker/_0001/2019-10-20-docker容器基本使用.md
@@ -30,7 +30,7 @@ Docker 是一个[开源](https://baike.baidu.com/item/%E5%BC%80%E6%BA%90/246339)
 | 容器        | 对象       |
 | 镜像        |类          |
 
-![架构图](images/_0001_1.png)
+![架构图](./images/_0001_1.png)
 
 | Docker 镜像(Images)    | Docker 镜像是用于创建 Docker 容器的模板。                    |
 | ---------------------- | ------------------------------------------------------------ |
@@ -49,19 +49,20 @@ Docker 是一个[开源](https://baike.baidu.com/item/%E5%BC%80%E6%BA%90/246339)
 
 
 ```
-		docker pull training/webapp #载入镜像
-		docker run -d -P training/webapp python app.py 
+docker pull training/webapp #载入镜像
+docker run -d -P training/webapp python app.py 
 ```
-		参数说明
-			-d：让容器在后台运行
-			-P: 将容器后台使用的网络端口映射到我们主机上
+参数说明
+	
+	-d：让容器在后台运行
+	-P: 将容器后台使用的网络端口映射到我们主机上
 
 ##### 4.查看容器
 
 ```
-		runoob@runoob:~#  docker ps
-		CONTAINER ID        IMAGE               COMMAND             ...        PORTS                
-		d3d5e39ed9d3        training/webapp     "python app.py"     ...        0.0.0.0:32769->5000/tcp
+runoob@runoob:~#  docker ps
+CONTAINER ID        IMAGE               COMMAND    ...        PORTS                
+d3d5e39ed9d3        training/webapp     "python app.py"     ...        0.0.0.0:32769->5000/tcp
 
 		用-p来设置不一样的端口
 		runoob@runoob:~$ docker run -d -p 5000:5000 training/webapp python app.py
@@ -71,26 +72,24 @@ Docker 是一个[开源](https://baike.baidu.com/item/%E5%BC%80%E6%BA%90/246339)
 
    ##### 1. 停止容器 
 
-      ```
-      docker stop [CONTAINER ID | NAMES]
-      ```
+```
+docker stop [CONTAINER ID | NAMES]
+```
    ##### 2. 重启容器
 
-      ```
-      docker restart  [CONTAINER ID | NAMES]
-      ```
-   ##### 3.  启动容器
+```
+docker restart  [CONTAINER ID | NAMES]
+```
+   ##### 3. 启动容器
 
-   ```
-   	docker start  [CONTAINER ID | NAMES]
-   ```
+```
+docker start  [CONTAINER ID | NAMES]
+```
 
    ##### 4.移除容器
-
-   ```
-   	docker rm  [CONTAINER ID | NAMES]
-   	
-   ```
+```
+docker rm  [CONTAINER ID | NAMES]   	
+```
 
 #### 镜像使用
 ##### 知识点:
@@ -99,33 +98,32 @@ Docker 是一个[开源](https://baike.baidu.com/item/%E5%BC%80%E6%BA%90/246339)
 
 ------
 
- 	##### 1. 列出镜像列表
- 	```
- 	docker images
- 	```
- 	##### 2. 获取一个新镜像
- 	```
- 	docker pull centos:6
- 	
- 	```
- 	##### 3. 查找镜像
- 	```
- 	docker search centos
- 	```
- 	##### 4. 创建镜像
- 		- 从已经创建容器中更新镜像,并且提交这个镜像.
- 		- 使用 Dockerfile 指令来创建一个新镜像
- 	###### 1. 更新镜像
+##### 1. 列出镜像列表
+```
+docker images
+```
+##### 2. 获取一个新镜像
+```
+docker pull centos:6 	
+```
+##### 3. 查找镜像
+```
+docker search centos
+```
+##### 4. 创建镜像
+ 	- 从已经创建容器中更新镜像,并且提交这个镜像.
+ 	- 使用 Dockerfile 指令来创建一个新镜像
+###### 1. 更新镜像
  	更新镜像之前我们需要使用镜像创建一个容器
- 	```
- 		docker run -it centos:7 /bin/bash
- 	```
+```
+docker run -it centos:7 /bin/bash
+```
 	运行任意指令修改该容器环境
 	窗口输入exit退出容器环境
 	我们通过commit命令来提交副本
-	```
-	root@123:~$ docker commit -m="has update" -a="authorName" e218edb10161 username/centos:v2
-	```
+```
+root@123:~$ docker commit -m="has update" -a="authorName" e218edb10161 username/centos:v2
+```
 	-m:备注信息	
 	e218edb10161:容器id
 	username: docker hub 账户名
@@ -136,7 +134,7 @@ Docker 是一个[开源](https://baike.baidu.com/item/%E5%BC%80%E6%BA%90/246339)
 ------
 
 以下部分未完待续.....
- 	###### 2. 构建镜像
+###### 2. 构建镜像
 
- 	##### 7. push镜像到远程仓库
+##### 7. push镜像到远程仓库
 
