fix: 修复文档格式

--- a/_posts/docker/_0001/2019-10-20-docker容器基本使用.md
+++ b/_posts/docker/_0001/2019-10-20-docker容器基本使用.md
@@ -70,23 +70,20 @@ d3d5e39ed9d3        training/webapp     "python app.py"     ...        0.0.0.0:3
 
 #### 容器使用
 
-   ##### 1. 停止容器 
+##### 1. 停止容器 
 
 ```
 docker stop [CONTAINER ID | NAMES]
 ```
-   ##### 2. 重启容器
-
+##### 2. 重启容器
 ```
 docker restart  [CONTAINER ID | NAMES]
 ```
-   ##### 3. 启动容器
-
+##### 3. 启动容器
 ```
 docker start  [CONTAINER ID | NAMES]
 ```
-
-   ##### 4.移除容器
+##### 4.移除容器
 ```
 docker rm  [CONTAINER ID | NAMES]   	
 ```
@@ -113,15 +110,15 @@ docker search centos
 ##### 4. 创建镜像
  	- 从已经创建容器中更新镜像,并且提交这个镜像.
  	- 使用 Dockerfile 指令来创建一个新镜像
-###### 1. 更新镜像
+##### 5. 更新镜像
  	更新镜像之前我们需要使用镜像创建一个容器
 ```
 docker run -it centos:7 /bin/bash
-```
-	运行任意指令修改该容器环境
-	窗口输入exit退出容器环境
-	我们通过commit命令来提交副本
-```
+
+运行任意指令修改该容器环境
+窗口输入exit退出容器环境
+我们通过commit命令来提交副本
+
 root@123:~$ docker commit -m="has update" -a="authorName" e218edb10161 username/centos:v2
 ```
 	-m:备注信息	
@@ -134,7 +131,7 @@ root@123:~$ docker commit -m="has update" -a="authorName" e218edb10161 username/
 ------
 
 以下部分未完待续.....
-###### 2. 构建镜像
+##### 6. 构建镜像
 
 ##### 7. push镜像到远程仓库
 
