feat: 修改图片无法显示问题

--- a/_posts/docker/_0001/2019-10-20-docker容器基本使用.md
+++ b/_posts/docker/_0001/2019-10-20-docker容器基本使用.md
@@ -30,7 +30,7 @@ Docker 是一个[开源](https://baike.baidu.com/item/%E5%BC%80%E6%BA%90/246339)
 | 容器        | 对象       |
 | 镜像        |类          |
 
-![架构图](./images/_0001_1.png)
+![架构图](/styles\images\0001\001.png)
 
 | Docker 镜像(Images)    | Docker 镜像是用于创建 Docker 容器的模板。                    |
 | ---------------------- | ------------------------------------------------------------ |
