--- a/_posts/leetcode/shareskill/2019-11-4-算法学习分享.md
+++ b/_posts/leetcode/shareskill/2019-11-4-算法学习分享.md
@@ -9,12 +9,20 @@ tag: 算法
 * content
 {:toc}
 ### 大纲
+
 #### 算法历史简介   
 #### 算法类型
 数组、二分、哈希表、链表、字符串、树、双指针、动态规划、位运算、递归、回溯、深度优先、广度优先
 #### 算法应用
-1. 数组+递归/查表大法\
-　　栗子:斐波那契数
-3. 递归+回溯
-
-4. 动态规划
+1. 数组：\
+　　栗子:斐波那契数\
+　　思路：递归/查表大法
+3. hash\
+　　栗子：两数之和\
+　　思路：循环/hash解法
+2. 递归+回溯\
+　　栗子:组合\
+　　解法： 递归+回溯
+4. 动态规划\
+　　栗子: 爬楼梯\
+　　解法：递归/动态规划
