fix: docker文章格式问题错误提交文件问题

--- a/_posts/docker/_0001/2019-10-20-docker容器基本使用.md
+++ b/_posts/docker/_0001/2019-10-20-docker容器基本使用.md
@@ -41,7 +41,6 @@ Docker 是一个[开源](https://baike.baidu.com/item/%E5%BC%80%E6%BA%90/246339)
 | Docker Machine         | Docker Machine是一个简化Docker安装的命令行工具，通过一个简单的命令行即可在相应的平台上安装Docker，比如VirtualBox、 Digital Ocean、Microsoft Azure。 |
 
 ### 基本使用
-#### 客户端
 
 ##### 1. 我们可以直接输入docker，查看docker客户端所有命令选项。
 ##### 2. 也可以直接输入 docker command --help 查看指定命令基本使用
@@ -63,9 +62,6 @@ docker run -d -P training/webapp python app.py
 runoob@runoob:~#  docker ps
 CONTAINER ID        IMAGE               COMMAND    ...        PORTS                
 d3d5e39ed9d3        training/webapp     "python app.py"     ...        0.0.0.0:32769->5000/tcp
-
-		用-p来设置不一样的端口
-		runoob@runoob:~$ docker run -d -p 5000:5000 training/webapp python app.py
 ```
 
 #### 容器使用
@@ -134,4 +130,16 @@ root@123:~$ docker commit -m="has update" -a="authorName" e218edb10161 username/
 ##### 6. 构建镜像
 
 ##### 7. push镜像到远程仓库
+
+##### 8. 镜像节点加速
+
+|网站|地址|
+|---|---|
+|docker官方中国区 | https://registry.docker-cn.com|
+|网易 |  http://hub-mirror.c.163.com|
+|ustc | https://docker.mirrors.ustc.edu.cn|
+|阿里|需要阿里云开发者账号：在控制台->容器与镜像服务->镜像中心->镜像加速器|
+
+推荐使用阿里的节点
+
 
