feat: blog,fix: 时间格式问题

--- a/_posts/leetcode/2018-10-12-_141.环形链表.md
+++ b/_posts/leetcode/2018-10-12-_141.环形链表.md
@@ -82,7 +82,7 @@ public boolean hasCycle(ListNode head) {
 #### 链表中不存在环：
     快指针将会首先到达尾部，其时间取决于列表的长度，也就是 O(n)O(n)。
 
-#### - 链表中存在环：
+#### 链表中存在环：
 
 我们将慢指针的移动过程划分为两个阶段：非环部分与环形部分：
 
