fix: 中文目录问题

--- a/_posts/computer-network/2020-07-28-_DNS子域名授权机制.md
+++ b/_posts/computer-network/2020-07-28-_DNS子域名授权机制.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "使用bind部署dns子域名服务器"
 date:   2020-07-28 17:31:01 +0800
-categories: 计算机网络
+categories: computer-network
 tag: dns
 ---
 
