--- a/_posts/mysql/2020-8-06_-mysql优化.md
+++ b/_posts/mysql/2020-8-06_-mysql优化.md
@@ -77,3 +77,7 @@ tag: mysql
 1. 当有很多更新操作时，innodb表可以提供更好的并发性，锁定级别时row，可以减少锁定竞争。
 
 2. myisam表的检索速度极快，但是，在有多个检索和更改操作混杂在一起的环境里，特别时当检索需要运行较长时间时，使用表级锁定可能会引发问题，在这种情况下，更新操作可能需要等待很长时间才能得到处理。
+
+## 如何避免回表查询
+
+    建立联合索引，覆盖需要查询的字段，这样在辅助索引里就有需要查询字段的值。
