fix: 中文分类可能导致显示问题

--- a/_posts/algorithm/2020-8-17_-kmp算法.md
+++ b/_posts/algorithm/2020-8-17_-kmp算法.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title:  "kmp算法"
-date:   2020-8-20 17:31:01 +0800
-categories: 算法
+date:   2020-8-17 17:31:01 +0800
+categories: algorithm
 tag: kmp算法
 ---
 
