--- a/_posts/algorithm/2020-9-9_-幂运算.md
+++ b/_posts/algorithm/2020-9-9_-幂运算.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title:  "幂运算技巧"
-date:   2020-09-8 16:31:01 +0800
-categories: 算法
+date:   2020-09-9 16:31:01 +0800
+categories: algorithm
 tag: 幂运算
 ---
 
