--- a/_posts/foundation/2020-08-17-_unicode字符集.md
+++ b/_posts/foundation/2020-08-17-_unicode字符集.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "字符-unicode字符集-utf-8之间关系"
 date:   2020-8-17 17:31:01 +0800
-categories: 基础
+categories: foundation
 tag: 编码
 ---
 
