feat: 添加面试题

--- a/_posts/java/2020-8-19-_面试题.md
+++ b/_posts/java/2020-8-19-_面试题.md
@@ -62,3 +62,10 @@ Object.equals()
 
 ## 2.两个对象的 hashCode()相同，则 equals()也一定为 true，对吗？
 不对
+
+## 3.为什么tcp 握手需要3次，2次不可以？
+    网上大多数解释都是，tcp需要确认发送方和接收方的序列号。
+    
+    但是实际上会产生疑问，为啥一定要确认呢？不确认不行，如果对方收到序列号就一定会使用该序列号呀？
+
+    这就要从tcp协议的特点来说，tcp协议时面向连接的可靠传输协议，那么就意味着，对于发送方和接受方来说，只有收到对方的序列号，才能确认1.对方的包能够发送给我2.对方能够按照事先约定好的序列号给我发送数据。从人和人的角度来说，需要建立一个彼此信任的基础
