--- a/_posts/grpc/2021-02-18-_grpc基础教程.md
+++ b/_posts/grpc/2021-02-18-_grpc基础教程.md
@@ -55,5 +55,92 @@ rpc RouteChat(stream RouteNote) returns (stream RouteNote) {}
 ## 生成客户端和服务端代码
    我们需要生成grpc客户端和服务端接口通过.proto 服务定义。我们使用协议缓冲编译器protoc 和指定的jrpc java plugin。
    当使用gradle or maven， the protoc 构建 插件能够生成需要的代码在构建阶段。
+### 以下这些class是自动生成的
+- Feature.java, Point.java, Rectangle.java, 和其他包括所有协议缓冲代码，序列化、请求和响应消息类型。
+- RouteGuideGrpc.java 它包括以下代码
+1. 一个基础的类作为RouteGuide 服务的实现类RouteGuideGrpc.RouteGuideImplBase，它的所有方法都在RouteGuide 接口类定义。
+2. stub classes 部分客户端可以使用他们与RouteGuide服务交互
 ### 如何用maven 编译 .proto 脚本生成代码
 ## 创建服务
+需要做两步工作
+- 覆盖 service base class 用我们自己的服务定义：做一些实际的工作。
+- 运行 grpc server 用来监听来自客户端的请求和返回服务响应
+可以参考如下代码[java/examples/src/main/java/io/grpc/examples/routeguide/RouteGuideServer.java](https://github.com/grpc/grpc-java/blob/master/examples/src/main/java/io/grpc/examples/routeguide/RouteGuideServer.java)
+## 实现RouteGuide
+我们的RouteGuideService 继承 RouteGuideGrpc.RouteGuideImplBase 抽象类
+```
+private static class RouteGuideService extends RouteGuideGrpc.RouteGuideImplBase {
+...
+}
+```
+
+## simple rpc
+
+RouteGuideService实现所有服务方法。
+```
+@Override
+public void getFeature(Point request, StreamObserver<Feature> responseObserver) {
+  responseObserver.onNext(checkFeature(request));
+  responseObserver.onCompleted();
+}
+
+...
+
+private Feature checkFeature(Point location) {
+  for (Feature feature : features) {
+    if (feature.getLocation().getLatitude() == location.getLatitude()
+        && feature.getLocation().getLongitude() == location.getLongitude()) {
+      return feature;
+    }
+  }
+
+  // No feature was found, return an unnamed feature.
+  return Feature.newBuilder().setName("").setLocation(location).build();
+}
+```
+这个 getFeature（）方法有两个参数
+- Point： the request
+- StreamObserver<Feature>: 一个响应观察者， 它是一个特殊的接口，用来让服务返回它的响应。
+给客户端返回响应和完成调用
+1. 我们构建一个Feature 响应对象作为客户端返回对象，在我们的服务定义里指定。
+2. 我们使用响应观察者的onNext（）方法来返回Feature对象
+3. 我们使用响应观察者的onCompleted()方法来指定我们已经完成了rpc调用的处理。
+## 服务端流rpc
+ListFeatures 是一个服务端流rpc，我们需要发送多个Feature给客户端。
+
+```
+private final Collection<Feature> features;
+
+...
+
+@Override
+public void listFeatures(Rectangle request, StreamObserver<Feature> responseObserver) {
+  int left = min(request.getLo().getLongitude(), request.getHi().getLongitude());
+  int right = max(request.getLo().getLongitude(), request.getHi().getLongitude());
+  int top = max(request.getLo().getLatitude(), request.getHi().getLatitude());
+  int bottom = min(request.getLo().getLatitude(), request.getHi().getLatitude());
+
+  for (Feature feature : features) {
+    if (!RouteGuideUtil.exists(feature)) {
+      continue;
+    }
+
+    int lat = feature.getLocation().getLatitude();
+    int lon = feature.getLocation().getLongitude();
+    if (lon >= left && lon <= right && lat >= bottom && lat <= top) {
+      responseObserver.onNext(feature);
+    }
+  }
+  responseObserver.onCompleted();
+}
+```
+
+Like the simple RPC, this method gets a request object (the Rectangle in which our client wants to find Features) and a StreamObserver response observer.
+
+This time, we get as many Feature objects as we need to return to the client (in this case, we select them from the service’s feature collection based on whether they’re inside our request Rectangle), and write them each in turn to the response observer using its onNext() method. Finally, as in our simple RPC, we use the response observer’s onCompleted() method to tell gRPC that we’ve finished writing responses.
+
+### 优势
+- 从服务端的角度来说用流能够减小传输封包的数据量，非流传输每个消息都需要完整的封装，同时处理数据和发送数据不能同步进行。
+- 从客户端的角度来说能够减少拆包逻辑处理的次数。
+## 客户端流rpc
+
