grpc、apollo、job

--- a/_posts/grpc/2021-02-18-_grpc基础教程.md
+++ b/_posts/grpc/2021-02-18-_grpc基础教程.md
@@ -144,3 +144,133 @@ This time, we get as many Feature objects as we need to return to the client (in
 - 从客户端的角度来说能够减少拆包逻辑处理的次数。
 ## 客户端流rpc
 
+我们将从客户端流中获取Points 然后发送一个RouteSummary
+
+```
+@Override
+public StreamObserver<Point> recordRoute(final StreamObserver<RouteSummary> responseObserver) {
+  return new StreamObserver<Point>() {
+    int pointCount;
+    int featureCount;
+    int distance;
+    Point previous;
+    long startTime = System.nanoTime();
+
+    @Override
+    public void onNext(Point point) {
+      pointCount++;
+      if (RouteGuideUtil.exists(checkFeature(point))) {
+        featureCount++;
+      }
+      // For each point after the first, add the incremental distance from the previous point
+      // to the total distance value.
+      if (previous != null) {
+        distance += calcDistance(previous, point);
+      }
+      previous = point;
+    }
+
+    @Override
+    public void onError(Throwable t) {
+      logger.log(Level.WARNING, "Encountered error in recordRoute", t);
+    }
+
+    @Override
+    public void onCompleted() {
+      long seconds = NANOSECONDS.toSeconds(System.nanoTime() - startTime);
+      responseObserver.onNext(RouteSummary.newBuilder().setPointCount(pointCount)
+          .setFeatureCount(featureCount).setDistance(distance)
+          .setElapsedTime((int) seconds).build());
+      responseObserver.onCompleted();
+    }
+  };
+}
+
+```
+    服务端方法需要返回一个StreamObserver<Point>接口的对象，用来在客户端流消息每次到达后快速处理和返回一个总体处理结果。
+    onCompleted()方法（当客户端发送完消息后被调用）
+    注意：必须等到客户端发完所有消息以后服务端才调用onCompleted()返回处理结果
+
+  ## 双向 流rpc
+  ```
+@Override
+public StreamObserver<RouteNote> routeChat(final StreamObserver<RouteNote> responseObserver) {
+  return new StreamObserver<RouteNote>() {
+    @Override
+    public void onNext(RouteNote note) {
+      List<RouteNote> notes = getOrCreateNotes(note.getLocation());
+
+      // Respond with all previous notes at this location.
+      for (RouteNote prevNote : notes.toArray(new RouteNote[0])) {
+        responseObserver.onNext(prevNote);
+      }
+
+      // Now add the new note to the list
+      notes.add(note);
+    }
+
+    @Override
+    public void onError(Throwable t) {
+      logger.log(Level.WARNING, "Encountered error in routeChat", t);
+    }
+
+    @Override
+    public void onCompleted() {
+      responseObserver.onCompleted();
+    }
+  };
+}
+
+  ```
+
+    即使每一端将总是按照另一端写入顺序获取到消息，客户端和服务端能够按照顺序读取和写入，他们的流操作完全独立，服务端的onNext()和onCompeted（）无需写在一个函数里。
+     
+## 开启服务端
+如果我们实现了所有方法，我们需要在客户端使用grpc服务
+```
+public RouteGuideServer(int port, URL featureFile) throws IOException {
+  this(ServerBuilder.forPort(port), port, RouteGuideUtil.parseFeatures(featureFile));
+}
+
+/** Create a RouteGuide server using serverBuilder as a base and features as data. */
+public RouteGuideServer(ServerBuilder<?> serverBuilder, int port, Collection<Feature> features) {
+  this.port = port;
+  server = serverBuilder.addService(new RouteGuideService(features))
+      .build();
+}
+...
+public void start() throws IOException {
+  server.start();
+  logger.info("Server started, listening on " + port);
+ ...
+}
+```
+
+1. 指定一个ip和port用来监听客户端请求，使用ServerBuilder.forPort()
+2. 创建一个实现类RouteGuideService，调用serverBuilder.addService（）添加服务
+3.  调用builder的build() 和 start()用来创建和启动rpc服务。
+
+## 创建客户端
+接下来我们将要为RouteGuide服务创建一个客户端，以下连接可以看到完整的example代码[grpc-java/examples/src/main/java/io/grpc/examples/routeguide/RouteGuideClient.java.](https://github.com/grpc/grpc-java/blob/master/examples/src/main/java/io/grpc/examples/routeguide/RouteGuideClient.java)
+
+
+- 一个 阻塞/同步stub： 意味着rpc程序调用需要等待服务响应，将会收到一个响应或者是错误信息。
+-  一个 非阻塞/异步stub，意味着非阻塞调用，可能响应已经异步返回。你需要确定的是，流类型的rpc调用只能使用异步stub
+
+```
+public RouteGuideClient(String host, int port) {
+  this(ManagedChannelBuilder.forAddress(host, port).usePlaintext());
+}
+/** Construct client for accessing RouteGuide server using the existing channel. */
+public RouteGuideClient(ManagedChannelBuilder<?> channelBuilder) {
+  channel = channelBuilder.build();
+  blockingStub = RouteGuideGrpc.newBlockingStub(channel);
+  asyncStub = RouteGuideGrpc.newStub(channel);
+}
+```
+    我们使用ManagedChannelBuilder创建管道。
+    现在我们能够使用管道来创建stub，newStub（） 或者是newBlockingStub（）是RouteGuideGrpc类提供的，我们通过.proto自动生成的类。
+```
+    blockingStub = RouteGuideGrpc.newBlockingStub(channel);
+asyncStub = RouteGuideGrpc.newStub(channel);
+```
